--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  <h1>支援について</h1>
- 支援についてですが、現金などの受け取りは年齢的にもあまり良くないため、Discord Nitroなどでの受け取りとなります<br>
+ 支援についてですが、現金などの受け取りは年齢的にもあまり良くないため、Discord Nitroなどでの受け取りとなります(支援方法はなんでもok)<br>
  支援する場合はとまてぃむ#0225にフレ申請をお願い致します。<br>
  bot制作申請は支援をくださった方優先とさせていただきます
 </body>
